--- a/lang/fr.json
+++ b/lang/fr.json
@@ -59,9 +59,9 @@
 "Generate XORpad of the TWL (DSi) partition.":"Générer les XORpads de la partition TWL (DSi)",
 "Generate XORpad of the TWL (DSi) FAT16 partition (TWL logical partition 0).":"Générer les XORpads de la partition FAT16 TWL (DSi) (partition TWL logique 0)",
 "Generate XORpad of the TWL (DSi) FAT12 photo partition (TWL logical partition 1).":"Générer les XORpads de la partition photo FAT12 TWL (DSi) (partition TWL logique 1)",
-"Generate XORpad of the AGB (GBA) savegame partition.":"Générer les XORpads de la partition dédié aux sauvegardes de jeux AGB (GBA).",
-"Generate XORpad of the first firmware partition.":"Générer les XORpads de la première partition dédié au firmware.",
-"Generate XORpad of the second firmware partition.":"Générer les XORpads de la seconde partition dédié au firmwares.",
+"Generate XORpad of the AGB (GBA) savegame partition.":"Générer les XORpads de la partition dédiée aux sauvegardes de jeux AGB (GBA).",
+"Generate XORpad of the first firmware partition.":"Générer les XORpads de la première partition dédiée au firmware.",
+"Generate XORpad of the second firmware partition.":"Générer les XORpads de la seconde partition dédiée au firmwares.",
 "Generate XORpad of the CTR partition.":"Générer les XORpads de la partition CTR.",
 "Generate XORpad of the CTR (3DS) FAT 16 partition (CTR logical partition 0).":"Générer les XORpads de la partition FAT 16 CTR (3DS) (partition CTR logique 0)",
 "Dump":"Extraction",
@@ -70,37 +70,37 @@
 "Dump NAND image, separate partitions or files from the first EmuNAND.":"Extraire l'image de la NAND, des partitions séparées ou des fichiers à partir de la première EmuNAND.",
 "Dump NAND image, separate partitions or files from the second EmuNAND.":"Extraire l'image de la NAND, des partitions séparées ou des fichiers à partir de la seconde EmuNAND.",
 "Dump NAND image, separate partitions or files from the third EmuNAND.":"Extraire l'image de la NAND, des partitions séparées ou des fichiers à partir de la troisième EmuNAND.",
-"Image":"Image",
-"Backup NAND raw image to file.":"",
+"Image":"",
+"Backup NAND raw image to file.":"Extraire l'image de la NAND vers un fichier",
 "Partitions":"",
 "Dump decrypted NAND partitions to file.":"Extraire une partition décryptée de la NAND vers un fichier.",
 "Dump decrypted TWL (DSi) partition to file.":"Extraire une partition TWL (DSi) décryptée vers un fichier.",
-"Dump decrypted TWL (DSi) FAT16 partition (TWL logical partition 0) to file.":"Extraire une partition FAT 16 TWL (DSi) décryptée vers un fichier.",
-"Dump decrypted TWL (DSi) FAT12 photo partition (TWL logical partition 1) to file.":"Extraire une partition photo FAT 12 TWL (DSi) décryptée vers un fichier.",
-"Dump decrypted AGB (GBA) savegame partition to file.":"Extraire une partition de sauvegarde dédié aux jeux AGB (GBA) décryptée vers un fichier.",
-"Dump decrypted first firmware partition to file.":"",
-"Dump decrypted second firmware partition to file.":"",
-"Dump decrypted CTR partition to file.":"",
-"Dump decrypted CTR (3DS) FAT 16 partition (CTR logical partition 0) to file.":"",
+"Dump decrypted TWL (DSi) FAT16 partition (TWL logical partition 0) to file.":"Extraire une partition FAT 16 TWL (DSi) décryptée vers un fichier (partition TWL logique 0).",
+"Dump decrypted TWL (DSi) FAT12 photo partition (TWL logical partition 1) to file.":"Extraire une partition photo FAT 12 TWL (DSi) décryptée vers un fichier (partition TWL logique 1).",
+"Dump decrypted AGB (GBA) savegame partition to file.":"Extraire une partition de sauvegarde dédiée aux jeux AGB (GBA) décryptée vers un fichier.",
+"Dump decrypted first firmware partition to file.":"Extraire la première partition dédiée au firmware vers un fichier.",
+"Dump decrypted second firmware partition to file.":"Extraire la seconde partition dédiée au firmware vers un fichier.",
+"Dump decrypted CTR partition to file.":"Extraire la partition CTR vers un fichier.",
+"Dump decrypted CTR (3DS) FAT 16 partition (CTR logical partition 0) to file.":"Extraire la partition FAT 16 CTR (3DS) vers un fichier (partition CTR logique 0).",
 "Files":"Fichiers",
-"Dump files from the CTRNAND FAT16 partition.":"",
+"Dump files from the CTRNAND FAT16 partition.":"Extraire un fichier de la partition FAT16 CTRNAND.",
 "Inject":"Injection",
 "Injection options.":"Options d'injection.",
-"Inject NAND image, separate partitions or files to the SysNAND.":"",
-"Inject NAND image, separate partitions or files to the first EmuNAND.":"",
-"Inject NAND image, separate partitions or files to the second EmuNAND.":"",
-"Inject NAND image, separate partitions or files to the third EmuNAND.":"",
-"Restore NAND from raw image file.":"",
-"Inject unencrypted NAND partitions from file.":"",
-"Inject unencrypted TWL (DSi) partition from file.":"",
-"Inject unencrypted TWL (DSi) FAT16 partition (TWL logical partition 0) from file.":"",
-"Inject unencrypted TWL (DSi) FAT12 photo partition (TWL logical partition 1) from file.":"",
-"Inject unencrypted AGB (GBA) savegame partition from file.":"",
-"Inject unencrypted first firmware partition from file.":"",
-"Inject unencrypted second firmware partition from file.":"",
-"Inject unencrypted CTR partition from file.":"",
-"Inject unencrypted CTR (3DS) FAT 16 partition (CTR logical partition 0) from file.":"",
-"Inject files to the CTRNAND FAT16 partition.":"",
+"Inject NAND image, separate partitions or files to the SysNAND.":"Injecter l'image de la NAND, des partitions séparées ou des fichiers vers la SysNAND.",
+"Inject NAND image, separate partitions or files to the first EmuNAND.":"Injecter l'image de la NAND, des partitions séparées ou des fichiers vers la première EmuNAND.",
+"Inject NAND image, separate partitions or files to the second EmuNAND.":"Injecter l'image de la NAND, des partitions séparées ou des fichiers vers la seconde EmuNAND.",
+"Inject NAND image, separate partitions or files to the third EmuNAND.":"Injecter l'image de la NAND, des partitions séparées ou des fichiers vers la troisième EmuNAND.",
+"Restore NAND from raw image file.":"Restaurer le fichier de l'image de la NAND.",
+"Inject unencrypted NAND partitions from file.":"Injecter la NAND décrypter à partir d'un fichier.",
+"Inject unencrypted TWL (DSi) partition from file.":"Injecter la partition TWL (DSi) décrypter à partir d'un fichier.",
+"Inject unencrypted TWL (DSi) FAT16 partition (TWL logical partition 0) from file.":"Injecter la partition FAT16 TWL (DSi) décrypter à partir d'un fichier (partition TWL logique 0).",
+"Inject unencrypted TWL (DSi) FAT12 photo partition (TWL logical partition 1) from file.":"Injecter la partition photo FAT12 TWL (DSi) décrypter à partir d'un fichier (partition TWL logique 1).",
+"Inject unencrypted AGB (GBA) savegame partition from file.":"Injecter la partition dédiée aux sauvegardes des jeux AGB (GBA) décrypter à partir d'un fichier.",
+"Inject unencrypted first firmware partition from file.":"Injecter la première partition dédiée au firmware décrypter à partir d'un fichier.",
+"Inject unencrypted second firmware partition from file.":"Injecter la deuxième partition dédiée au firmware décrypter à partir d'un fichier.",
+"Inject unencrypted CTR partition from file.":"Injecter la partition CTR décrypter à partir d'un fichier.",
+"Inject unencrypted CTR (3DS) FAT 16 partition (CTR logical partition 0) from file.":"Injecter la partition FAT 16 CTR (3DS) décrypter à partir d'un fichier.",
+"Inject files to the CTRNAND FAT16 partition.":"Injecter des fichiers vers la partition FAT16 CTRNAND.",
 "Copy":"Copie",
 "Copy options.":"Options de copie",
 "SysNAND to EmuNAND":"De la SysNAND vers l'EmuNAND",
@@ -115,26 +115,26 @@
 "EmuNAND2 to SysNAND":"De l'EmuNAND2 vers SysNAND",
 "EmuNAND2 to EmuNAND":"De l'EmuNAND2 vers l'EmuNAND",
 "EmuNAND2 to EmuNAND1":"De l'EmuNAND2 vers l'EmuNAND1",
-"Copy NAND image, separate partitions or files from SysNAND to first EmuNAND.":"",
-"Copy NAND image, separate partitions or files from SysNAND to second EmuNAND.":"",
-"Copy NAND image, separate partitions or files from SysNAND to third EmuNAND.":"",
-"Copy NAND image, separate partitions or files from first EmuNAND to SysNAND.":"",
-"Copy NAND image, separate partitions or files from first EmuNAND to second EmuNAND.":"",
-"Copy NAND image, separate partitions or files from first EmuNAND to third EmuNAND.":"",
-"Copy NAND image, separate partitions or files from second EmuNAND to SysNAND.":"",
-"Copy NAND image, separate partitions or files from second EmuNAND to first EmuNAND.":"",
-"Copy NAND image, separate partitions or files from second EmuNAND to third EmuNAND.":"",
-"Copy NAND image, separate partitions or files from third EmuNAND to SysNAND.":"",
-"Copy NAND image, separate partitions or files from third EmuNAND to first EmuNAND.":"",
-"Copy NAND image, separate partitions or files from third EmuNAND to second EmuNAND.":"",
+"Copy NAND image, separate partitions or files from SysNAND to first EmuNAND.":"Copier l'image de la NAND, des partitions séparées ou des fichiers de la SysNAND vers la première EmuNAND.",
+"Copy NAND image, separate partitions or files from SysNAND to second EmuNAND.":"Copier l'image de la NAND, des partitions séparées ou des fichiers de la SysNAND vers la seconde EmuNAND.",
+"Copy NAND image, separate partitions or files from SysNAND to third EmuNAND.":"Copier l'image de la NAND, des partitions séparées ou des fichiers de la SysNAND vers la troisième EmuNAND.",
+"Copy NAND image, separate partitions or files from first EmuNAND to SysNAND.":"Copier l'image de la NAND, des partitions séparées ou des fichiers de la première EmuNAND à la SysNAND.",
+"Copy NAND image, separate partitions or files from first EmuNAND to second EmuNAND.":"Copier l'image de la NAND, des partitions séparées ou des fichiers de la première EmuNAND à la seconde EmuNAND.",
+"Copy NAND image, separate partitions or files from first EmuNAND to third EmuNAND.":"Copier l'image de la NAND, des partitions séparées ou des fichiers de la première EmuNAND vers la seconde EmuNAND.",
+"Copy NAND image, separate partitions or files from second EmuNAND to SysNAND.":"Copier l'image de la NAND, des partitions séparées ou des fichiers de la seconde EmuNAND vers la SysNAND.",
+"Copy NAND image, separate partitions or files from second EmuNAND to first EmuNAND.":"Copier l'image de la NAND, des partitions séparées ou des fichiers de l",
+"Copy NAND image, separate partitions or files from second EmuNAND to third EmuNAND.":"Copier l'image de la NAND, des partitions séparées ou des fichiers de la seconde EmuNAND vers la troisième EmuNAND.",
+"Copy NAND image, separate partitions or files from third EmuNAND to SysNAND.":"Copier l'image de la NAND, des partitions séparées ou des fichiers de la troisième EmuNAND vers la SysNAND.",
+"Copy NAND image, separate partitions or files from third EmuNAND to first EmuNAND.":"Copier l'image de la NAND, des partitions séparées ou des fichiers de la troisième EmuNAND vers la première EmuNAND.",
+"Copy NAND image, separate partitions or files from third EmuNAND to second EmuNAND.":"Copier l'image de la NAND, des partitions séparées ou des fichiers de la troisième EmuNAND vers la seconde EmuNAND.",
 "Copy full NAND image.":"Copier totalement l'image de la NAND.",
 "Copy partitions.":"Copier les partitions.",
 "Copy TWL (DSi) partition.":"Copier la partition TWL (DSi).",
 "Copy TWL (DSi) FAT16 partition (TWL logical partition 0).":"Copier la partition FAT16 TWL (DSi).",
 "Copy TWL (DSi) FAT12 photo partition (TWL logical partition 1).":"Copier la partition photo FAT12 TWL (DSi).",
-"Copy AGB (GBA) savegame partition.":"Copie de la partition dédié aux sauvegardes de jeux AGB (GBA).",
-"Copy first firmware partition.":"Copier la première partition dédié au firmware.",
-"Copy second firmware partition.":"Copier la seconde partition dédié au firmware.",
+"Copy AGB (GBA) savegame partition.":"Copie de la partition dédiée aux sauvegardes de jeux AGB (GBA).",
+"Copy first firmware partition.":"Copier la première partition dédiée au firmware.",
+"Copy second firmware partition.":"Copier la seconde partition dédiée au firmware.",
 "Copy CTR (3DS) FAT 16 partition (CTR logical partition 0).":"Copier les partitions FAT 16 CTR (3DS).",
 "Copy files between CTRNAND FAT16 partitions.":"Copier des fichiers entre les partitions FAT 16 CTRNAND.",
 "Settings":"Paramètres",
@@ -154,7 +154,7 @@
 "Build version":"Version du build",
 "Keys":"Clé",
 "Check various key files presence validity.":"Vérifier la présence des fichiers contenant les clés binaires.",
-"Required for 6.x save game encryption on console firmware version below 7.0":"",
+"Required for 6.x save game encryption on console firmware version below 7.0":"Requis pour l'encryption des sauvegardes de jeux 6.x sur un firmware en dessous de 7.0",
 "Required for New 3DS firmware 9.5":"Requis pour le firmware 9.5 sur New 3DS",
 "Required for New 3DS firmware 9.6":"Requis pour le firmware 9.6 sur New 3DS",
 "Check SysNAND firmware and system titles versions.":"Vérifier le firmware de la SysNAND et la version de ces titres systèmes.",
