--- a/lang/fr.json
+++ b/lang/fr.json
@@ -10,8 +10,8 @@
 "[LEFT]":"",
 "[UP]":"",
 "[DOWN]":"",
-"Enabled":"Activée",
-"Disabled":"Désactivée",
+"Enabled":"Activé",
+"Disabled":"Désactivé",
 "Japan":"Japon",
 "North America":"Amérique du Nord",
 "Europe":"",
@@ -20,13 +20,13 @@
 "China":"Chine",
 "South Korea":"Corée du Sud",
 "Taiwan":"Taïwan",
-"Unknown":"Inconnue",
+"Unknown":"Inconnu",
 "Failed to %ls %ls!":"Impossible de %ls %ls!",
 "mount":"monter",
 "load":"charger",
 "file system":"système de fichier",
 "Press %ls to %ls.":"Appuyez sur %ls pour %ls.",
-"any button":"n'importe qu'elle bouton",
+"any button":"n'importe quel bouton",
 "continue":"continuer",
 "reboot":"redémarrer",
 "cancel":"annuler",
@@ -44,14 +44,14 @@
 
 "Boot":"Démarrage",
 "Boot options.":"Options de démarrage",
-"Apply patches and reboot the console into rxMode on EmuNAND, if present.":"Appliquer les patchs et redémarré la console en rxMode sur EmuNAND, si elle est présente.",
-"Apply patches and reboot the console into rxMode on SysNAND.":"Appliquer les patchs et redémarré la console en rxMode sur SysNAND.",
+"Apply patches and reboot the console into rxMode on EmuNAND, if present.":"Appliquer les patchs et redémarrer la console en rxMode sur EmuNAND, si elle est présente.",
+"Apply patches and reboot the console into rxMode on SysNAND.":"Appliquer les patchs et redémarrer la console en rxMode sur SysNAND.",
 "Patches signature checks and load in SysNAND with GBA and DSi support.":"Patch la verfication des signatures et charge la SysNAND avec support des jeux GBA et DSi",
 "Reboot":"Redémarrage",
-"Reboot the console.":"Redémarrez la console.",
-"Turn off the console.":"Éteignez la console.",
+"Reboot the console.":"Redémarrer la console.",
+"Turn off the console.":"Éteindre la console.",
 "Decrypt":"Décrypter",
-"Decryption options.":"Option de décryptage.",
+"Decryption options.":"Options de décryptage.",
 "Generate XORpads":"Générer les XORpads",
 "Generate XORpads for titles and NAND partitions.":"Générer les XORpads pour les titres et les partitions de la NAND",
 "Generate XORpads needed to decrypt and encrypt 3DS titles from SDinfo.bin.":"Générer les XORpads nécessaire pour le décryptage et le cryptage des titres 3DS à partir du fichier SDinfo.bin",
