--- a/lang/fr.json
+++ b/lang/fr.json
@@ -33,7 +33,7 @@
 "Completed!":"Complet!",
 "Canceled!":"Annuler!",
 "This file with a valid key must exist in the SD card root in order to boot rxMode on New 3DS.":"Ce fichier avec une clé valide doit se trouver dans la racine de la carte SD afin de démarrer rxMode sur New 3DS.",
-"This file with a valid key must exist in the SD card root in order to decrypt newer titles on firmware version below 7.0.0 and to use newer gamecard saves on firmware below 6.0.0.":"Ce fichier avec une clé valide doit se trouver dans la racine de la carte SD pour permettre le décryptage des derniers titres de la version 7.0.0 et pour permettre d'utiliser les sauvegardes des cartouches sur les versions 6.0.0 et moins",
+"This file with a valid key must exist in the SD card root in order to decrypt newer titles on firmware version below 7.0.0 and to use newer gamecard saves on firmware below 6.0.0.":"Ce fichier avec une clé valide doit se trouver dans la racine de la carte SD pour permettre le décryptage des derniers titres de la version 7.0.0 et pour permettre d'utiliser les sauvegardes des cartouches sur les versions 6.0.0 et moins.",
 "Generating %ls XORpad":"Génération du XORpad %ls",
 "Dumping %ls":"Extraction de %ls",
 "Injecting %ls":"Injection de %ls",
@@ -43,17 +43,17 @@
 "Copying %ls partition from %ls to %ls":"Copie de la partition %ls de %ls vers %ls",
 
 "Boot":"Démarrage",
-"Boot options.":"Options de démarrage",
+"Boot options.":"Options de démarrage.",
 "Apply patches and reboot the console into rxMode on EmuNAND, if present.":"Appliquer les patchs et redémarrer la console en rxMode sur EmuNAND, si elle est présente.",
 "Apply patches and reboot the console into rxMode on SysNAND.":"Appliquer les patchs et redémarrer la console en rxMode sur SysNAND.",
-"Patches signature checks and load in SysNAND with GBA and DSi support.":"Patch la verfication des signatures et charge la SysNAND avec support des jeux GBA et DSi",
+"Patches signature checks and load in SysNAND with GBA and DSi support.":"Patch la verfication des signatures et charge la SysNAND avec support des jeux GBA et DSi.",
 "Reboot":"Redémarrage",
 "Reboot the console.":"Redémarrer la console.",
 "Turn off the console.":"Éteindre la console.",
 "Decrypt":"Décrypter",
 "Decryption options.":"Options de décryptage.",
 "Generate XORpads":"Générer les XORpads",
-"Generate XORpads for titles and NAND partitions.":"Générer les XORpads pour les titres et les partitions de la NAND",
+"Generate XORpads for titles and NAND partitions.":"Générer les XORpads pour les titres et les partitions de la NAND.",
 "Generate XORpads needed to decrypt and encrypt 3DS titles from SDinfo.bin.":"Générer les XORpads nécessaire pour le décryptage et le cryptage des titres 3DS à partir du fichier SDinfo.bin",
 "Generate XORpads needed to decrypt and encrypt 3DS titles from ncchinfo.bin.":"Générer les XORpads nécessaire au décryptage et à l'encryptage des titres 3DS à partir du fichier ncchinfo.bin.",
 "Generate XORpad of the TWL (DSi) partition.":"Générer les XORpads de la partition TWL (DSi)",
@@ -71,7 +71,7 @@
 "Dump NAND image, separate partitions or files from the second EmuNAND.":"Extraire l'image de la NAND, des partitions séparées ou des fichiers à partir de la seconde EmuNAND.",
 "Dump NAND image, separate partitions or files from the third EmuNAND.":"Extraire l'image de la NAND, des partitions séparées ou des fichiers à partir de la troisième EmuNAND.",
 "Image":"",
-"Backup NAND raw image to file.":"Extraire l'image de la NAND vers un fichier",
+"Backup NAND raw image to file.":"Sauvegarder l'image de la NAND vers un fichier.",
 "Partitions":"",
 "Dump decrypted NAND partitions to file.":"Extraire une partition décryptée de la NAND vers un fichier.",
 "Dump decrypted TWL (DSi) partition to file.":"Extraire une partition TWL (DSi) décryptée vers un fichier.",
@@ -122,7 +122,7 @@
 "Copy NAND image, separate partitions or files from first EmuNAND to second EmuNAND.":"Copier l'image de la NAND, des partitions séparées ou des fichiers de la première EmuNAND à la seconde EmuNAND.",
 "Copy NAND image, separate partitions or files from first EmuNAND to third EmuNAND.":"Copier l'image de la NAND, des partitions séparées ou des fichiers de la première EmuNAND vers la seconde EmuNAND.",
 "Copy NAND image, separate partitions or files from second EmuNAND to SysNAND.":"Copier l'image de la NAND, des partitions séparées ou des fichiers de la seconde EmuNAND vers la SysNAND.",
-"Copy NAND image, separate partitions or files from second EmuNAND to first EmuNAND.":"Copier l'image de la NAND, des partitions séparées ou des fichiers de l",
+"Copy NAND image, separate partitions or files from second EmuNAND to first EmuNAND.":"Copier l'image de la NAND, des partitions séparées ou des fichiers de la seconde EmuNAND à la première EmuNAND.",
 "Copy NAND image, separate partitions or files from second EmuNAND to third EmuNAND.":"Copier l'image de la NAND, des partitions séparées ou des fichiers de la seconde EmuNAND vers la troisième EmuNAND.",
 "Copy NAND image, separate partitions or files from third EmuNAND to SysNAND.":"Copier l'image de la NAND, des partitions séparées ou des fichiers de la troisième EmuNAND vers la SysNAND.",
 "Copy NAND image, separate partitions or files from third EmuNAND to first EmuNAND.":"Copier l'image de la NAND, des partitions séparées ou des fichiers de la troisième EmuNAND vers la première EmuNAND.",
@@ -140,7 +140,7 @@
 "Settings":"Paramètres",
 "Change settings.":"Modifier les paramètres.",
 "Default boot":"Démarrage par défaut",
-"Force rxTools UI":"Forcer le démarrage de l'interphace graphique (GUI)",
+"Force rxTools UI":"Forcer le démarrage de l'interface graphique (GUI)",
 "Force rxMode EmuNAND":"Forcer le démarrage d'rxMode en EmuNAND",
 "Force rxMode SysNAND":"Forcer le démarrage d'rxMode en SysNAND",
 "Force Pasta mode":"Forcer le mode Pasta",
@@ -149,7 +149,7 @@
 "Language":"Langue",
 "SysNAND write protection":"Protection de la SysNAND en écriture",
 "Diagnostics":"Diagnostique",
-"Check console setup.":"Vérifier la configuration de la console",
+"Check console setup.":"Vérifier la configuration de la console.",
 "Check rxTools build properties.":"Vérifier les propriétées de ce build d'rxTools.",
 "Build version":"Version du build",
 "Keys":"Clé",
@@ -237,10 +237,10 @@
 "FAILED": "Échec!\n",
 "COMPLETED": "Complété!\n",
 "SETTINGS": "Options",
-"FORCE_UI_BOOT": "Forcer le démarrage de l'interphace graphique (GUI)    %ls",
+"FORCE_UI_BOOT": "Forcer le démarrage de l'interface graphique (GUI)    %ls",
 "SELECTED_THEME": "Thème choisi        <%3c  >",
 "SHOW_AGB": "Afficher le BIOS GBA   %ls",
-"ENABLE_3D_UI": "Activer l'interphace graphique (GUI) 3D          %ls",
+"ENABLE_3D_UI": "Activer l'interface graphique (GUI) 3D          %ls",
 "QUICK_BOOT": "Démarrage rapide       %ls",
 "ABSYSN": "Démarrer en SysNAND    %ls",
 "AUTOBOOT": "Démarrage automatique",
