--- a/lang/fr.json
+++ b/lang/fr.json
@@ -140,7 +140,7 @@
 "Settings":"Paramètres",
 "Change settings.":"Modifier les paramètres.",
 "Default boot":"Démarrage par défaut",
-"Force rxTools UI":"Forcer le démarrage de l'interface graphique (GUI)",
+"Force rxTools UI":"Forcer le démarrage de l'interphace graphique (GUI)",
 "Force rxMode EmuNAND":"Forcer le démarrage d'rxMode en EmuNAND",
 "Force rxMode SysNAND":"Forcer le démarrage d'rxMode en SysNAND",
 "Force Pasta mode":"Forcer le mode Pasta",
@@ -237,10 +237,10 @@
 "FAILED": "Échec!\n",
 "COMPLETED": "Complété!\n",
 "SETTINGS": "Options",
-"FORCE_UI_BOOT": "Forcer le démarrage de l'interface graphique (GUI)    %ls",
+"FORCE_UI_BOOT": "Forcer le démarrage d l'UI    %ls",
 "SELECTED_THEME": "Thème choisi        <%3c  >",
 "SHOW_AGB": "Afficher le BIOS GBA   %ls",
-"ENABLE_3D_UI": "Activer l'interface graphique (GUI) 3D          %ls",
+"ENABLE_3D_UI": "Activer l'UI 3D          %ls",
 "QUICK_BOOT": "Démarrage rapide       %ls",
 "ABSYSN": "Démarrer en SysNAND    %ls",
 "AUTOBOOT": "Démarrage automatique",
