Application dump/inject

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -85,6 +85,10 @@
 "Dump decrypted CTR (3DS) FAT 16 partition (CTR logical partition 0) to file.":"Извлечь расшифрованный раздел CTR (3DS) FAT 16 (логический раздел CTR 0) в файл.",
 "Files":"Файлы",
 "Dump files from the CTRNAND FAT16 partition.":"Извлечь файлы из раздела CTRNAND FAT16.",
+"Titles":"Приложения",
+"Dump titles from the CTRNAND FAT16 partition.":"Извлечь приложения из раздела CTRNAND FAT16.",
+"Dump System Settings application.":"Извлечь приложение Системные настройки.",
+"Dump Health and Safety Information application.":"Извлечь приложение Информация о здоровье и безопасности.",
 "Inject":"Заменить",
 "Injection options.":"Утилиты для замены.",
 "Inject NAND image, separate partitions or files to the SysNAND.":"Заменить образ NAND, отдельные разделы или файлы в SysNAND.",
@@ -102,6 +106,9 @@
 "Inject unencrypted CTR partition from file.":"Заменить не зашифрованный раздел CTR из файла.",
 "Inject unencrypted CTR (3DS) FAT 16 partition (CTR logical partition 0) from file.":"Заменить не зашифрованный раздел CTR (3DS) FAT 16 (логический раздел CTR 0) из файла.",
 "Inject files to the CTRNAND FAT16 partition.":"Заменить файлы на разделе CTRNAND FAT16.",
+"Inject titles from the CTRNAND FAT16 partition.":"Заменить приложения из раздела CTRNAND FAT16.",
+"Inject System Settings application.":"Заменить приложение Системные настройки.",
+"Inject Health and Safety Information application.":"Заменить приложение Информация о здоровье и безопасности.",
 "Copy":"Скопировать",
 "Copy options.":"Утилиты для копирования.",
 "SysNAND to EmuNAND":"Из SysNAND в EmuNAND",
