Update to fb6fab3431bd9979d70767944def46b6b7f4c1bc

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -84,6 +84,10 @@
 "Dump decrypted CTR (3DS) FAT 16 partition (CTR logical partition 0) to file.":"Extraire la partition FAT 16 CTR (3DS) vers un fichier (partition CTR logique 0).",
 "Files":"Fichiers",
 "Dump files from the CTRNAND FAT16 partition.":"Extraire un fichier de la partition FAT16 CTRNAND.",
+"Titles":"Titres",
+"Dump titles from the CTRNAND FAT16 partition.":"Extraire des titres de la partition FAT16 CTRNAND.",
+"Dump System Settings application.":"Extraire l'application Paramètre Système.",
+"Dump Health and Safety Information application.":"Extraire l'application Information sur la santé et la sécurité.",
 "Inject":"Injection",
 "Injection options.":"Options d'injection.",
 "Inject NAND image, separate partitions or files to the SysNAND.":"Injecter l'image de la NAND, des partitions séparées ou des fichiers vers la SysNAND.",
@@ -101,6 +105,9 @@
 "Inject unencrypted CTR partition from file.":"Injecter la partition CTR décrypter à partir d'un fichier.",
 "Inject unencrypted CTR (3DS) FAT 16 partition (CTR logical partition 0) from file.":"Injecter la partition FAT 16 CTR (3DS) décrypter à partir d'un fichier.",
 "Inject files to the CTRNAND FAT16 partition.":"Injecter des fichiers vers la partition FAT16 CTRNAND.",
+"Inject titles from the CTRNAND FAT16 partition.":"Injecter des titres vers la partition FAT16 CTRNAND.",
+"Inject System Settings application.":"Injecter l'application Paramètre Système.",
+"Inject Health and Safety Information application.":"Injecter l'application Information sur la santé et la sécurité.",
 "Copy":"Copie",
 "Copy options.":"Options de copie",
 "SysNAND to EmuNAND":"De la SysNAND vers l'EmuNAND",
